# notes

./: .gitignore  CMakeLists.txt
assets/: app.html
cmake/: App.cmake
src/: Application.cpp  Application.h  main.cpp  note.cpp  note.h
